--- a/src/assets/task-list/task-list.css
+++ b/src/assets/task-list/task-list.css
@@ -11,7 +11,6 @@
     font-family: 'Quicksand';
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
     flex-direction: column;
-    z-index: 1;
 }
 
 .task-list-header {
@@ -26,7 +25,6 @@
     color: #fbfbfb;
     background-image: linear-gradient(to right, rgb(39, 57, 114) , rgb(104, 110, 183));
     border-radius: 5px 5px 0 0;
-    z-index: 2;
 }
 
 .task-list-header p {
