--- a/src/assets/user-room/user-room.css
+++ b/src/assets/user-room/user-room.css
@@ -9,10 +9,12 @@
     background-repeat: no-repeat;
 }
 
-.head-container{
+.head-container {
     display: flex;
+    position: relative;
     justify-content: space-between;
     background-size: cover;
+    z-index: 1;
 }
 
 .header {
@@ -23,7 +25,7 @@
     white-space: nowrap;
     display: flex;
     margin: 20vh 10vw 5vh 10vw;
-    z-index: 3;
+    z-index: 0;
 }
 
 .widget-container {
@@ -31,6 +33,7 @@
     align-items: center;
     justify-content: flex-start;
 }
+
 
 @media (max-width: 900px) {
     .widget-container {
